nashorn/test/script/basic/eval.js.EXPECTED
eval.length 1
100
1100
200
2200
100
2200
300
3300
100
3300
is syntax error? true
SyntaxError:69:Missing close quote
print('hello)
             ^
